implement of 16th homework